@@ -16,6 +16,11 @@ Core and Builtins
 Library
 -------
 
+- Issue #10955: zipimport uses ASCII encoding instead of cp497 to decode
+  filenames, at bootstrap, if the codec registry is not ready yet. It is still
+  possible to have non-ASCII filenames using the Unicode flag (UTF-8 encoding)
+  for file entries in the ZIP file.
+
 - Issue #10949: Improved robustness of rotating file handlers.
 
 - Issue #10955: Fix a potential crash when trying to mmap() a file past its
